# GameOfLife

./: .gitignore  CMakeLists.txt  Readme.md
include/: grids.h  main.h
include/utils/: print_utils.h
python_bindings/: CMakeLists.txt  bindings.cpp
python_ui/: main.py
src/: CMakeLists.txt  grids.cpp  main.cpp  process_grid.cpp
src/utils/: print_utils.cpp
